# kugel

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO
.github/workflows/: release.yaml
assets/: icon.icns
packaging/: kugel.desktop
packaging/macos/: Info.plist  install.sh
src/: canvas.rs  export.rs  icons.rs  image_utils.rs  macos_open.rs  main.rs  markdown.rs  shapes.rs  state.rs  updater.rs  url_utils.rs
src/app/: file_io.rs  font.rs  link_preview.rs  mod.rs  selection.rs
src/app/ui/: canvas_view.rs  export_dialog.rs  mod.rs  text_editor.rs  toast.rs  toolbar.rs  top_left.rs
src/shapes/: image_bytes.rs  math.rs  mod.rs  shape_data.rs  tool.rs
